# scalene

./: .clang-format  .gitignore  heaplayers-make.mk  libscalene.cpp  pyproject.toml
include/: splitheap.hpp
test/: testme2.py
