[tool.poetry]
name = "scalene"
version = "0.7.5"
description = "Scalene: A high-resolution, low-overhead CPU and memory profiler for Python"
authors = ["Emery Berger <emery@cs.umass.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/emeryberger/scalene"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
numpy = "^1.18.1"
pytest = "^5.3.5"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
